@@ -2,22 +2,22 @@
 <addon id="plugin.video.telequebec"
        name="Télé-Québec"
        version="2.0.2"
-       provider-name="CB, SlySen">
-  <requires>
-    <import addon="xbmc.python" version="2.1.0"/>
-    <import addon="xbmc.json" version="6.0.0"/>
-    <import addon="xbmc.addon" version="12.0.0"/>
-    <import addon="script.module.simplejson" version="2.0.10" optional="true"/>
-  </requires>
-  <extension point="xbmc.python.pluginsource"
-             library="default.py">
-    <provides>video</provides>
-  </extension>
-  <extension point="xbmc.addon.metadata">
-    <platform>all</platform>
-    <summary>Plugin for the Télé-Québec.TV site</summary>
-	<summary lang="fr">Addiciel vidéo donnant accès à toutes les vidéos du site de TéléQuébec.TV</summary>
-    <description>Play all videos from Télé-Québec.TV site. Most videos can only be accessed in Canada.</description>
-	<description lang="fr">Cet addiciel permet d'accèder au contenu vidéo de TéléQuébec.TV.  La plupart des vidéos ne sont accessibles qu'au Canada.</description>
-  </extension>
+       provider-name="CB, SlySen"
+>
+    <requires>
+        <import addon="xbmc.python" version="2.1.0"/>
+        <import addon="xbmc.json" version="6.0.0"/>
+        <import addon="xbmc.addon" version="12.0.0"/>
+        <import addon="script.module.simplejson" version="2.0.10" optional="true"/>
+    </requires>
+    <extension point="xbmc.python.pluginsource" library="default.py">
+        <provides>video</provides>
+    </extension>
+    <extension point="xbmc.addon.metadata">
+        <platform>all</platform>
+        <summary>Plugin for the Télé-Québec.TV site</summary>
+	    <summary lang="fr">Addiciel vidéo donnant accès à toutes les vidéos du site de TéléQuébec.TV</summary>
+        <description>Play all videos from Télé-Québec.TV site. Most videos can only be accessed in Canada.</description>
+	    <description lang="fr">Cet addiciel permet d'accèder au contenu vidéo de TéléQuébec.TV.  La plupart des vidéos ne sont accessibles qu'au Canada.</description>
+    </extension>
 </addon>
